--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -9,8 +9,7 @@ execute:
 format: pdf
 fig-pos: "H"
 abstract: |
-
- This paper is about the election
+ "This paper develops a predictive model for the 2024 U.S. Presidential Election, analyzing state-level polling data to forecast outcomes between Donald Trump and Kamala Harris. Using logistic regression, the model estimates the likelihood of Trump’s success in swing states by weighting polls based on recency and sample size. Findings indicate that Harris has a higher probability of winning in most swing states, though close margins suggest targeted campaign efforts could alter outcomes in pivotal areas. This analysis provides insight into electoral dynamics, highlighting how data-driven approaches can clarify potential election outcomes and inform strategic political decision-making."
 ---
 
 ```{python}
@@ -437,7 +436,9 @@ This approach, inspired by Stantcheva’s guide on survey creation [@Stantcheva]
 # Appendix B: Siena / New York Tims Pennsilvania poll
 
 This section will discuss a particular poll from the database of polls used in the above analysis, one made by Siena College and the new york times. The New York Times partners with the Siena college in order to carry out political polls throughout the election period, these are often high quality polls according to their rating, likely because the nyt has been doing these polls for a long time. The NYT polls often emphasise a focus on the battleground states and poll then more than others making these very useful in this paper’s analysis. This action will focus on one poll done in Philadelphia, but those in other states follow the same methodology and patterns. This consistency is important for the NYT when they are reporting their results, as it makes comparison around the US states viable and reliable. In going over the methodology this appendix aims to understand what about this pollster makes them high quality and what might they leave wanting.
+
 ## Sampling method
+
 The poll employs a response rate-adjusted stratified sampling method using the L2 voter file, which contains detailed demographic information on registered voters. Initially the interviewee's are selected randomly from a national list of registered voters, response are then weighted. The stratification, often referred to as weighing, is applied to the random sample collected in order to properly reflect the entire demographic. The stratification accounts for:
 - Statehouse district
 - Political party affiliation
@@ -458,17 +459,15 @@ Times/ Siena polls are conducted by telephone, using live interviews. About 96% 
 The questions themselves included more than just the information on who a participant would vote on. Followup questions were given either because or regardless of what their previous answers were. One example would be follow up questions for those who answer as “don’t know/ refused” in order to understand some reasoning behind this answer. Those who did select an option also were asked questions to get a clear image of their sentiment or reasoning. The benefit of these additional questions is to bring context to the initial binary question.
 
 ## Methodology pros and cons
-The Random contact method in which people are contacted does not provide random sampling, as non-response has made this method on it's own more redundant. (@bailey2023new). This is clearly a factor here as the response rate was below 2%. The inclusion of response rate adjustments accounts for the likelihood that certain groups are more or less likely to respond to surveys, and is an efficient way to counter these issues (@Brick2013Nonresponse). The stratification also allows for a more representative expectation from the poll ensuring all significant groups are accurately represented in the sample as they are in the population (@Kish1965Survey), Making the means generate more accurate. 
+The Random contact method in which people are contacted does not provide random sampling, as non-response has made this method on it's own more redundant. (@bailey2023new). This is clearly a factor here as the response rate was below 2%. The inclusion of response rate adjustments accounts for the likelihood that certain groups are more or less likely to respond to surveys, and is an efficient way to counter these issues (@Brick2013Nonresponse). The stratification also allows for a more representative expectation from the poll ensuring all significant groups are accurately represented in the sample as they are in the population (@Kish1965Survey), Making the means generate more accurate.
+
 With such low response rates the possibility for risk, in spite of the effort made by the pollster, is that non-response and choice are correlated, this is known as non-response bias. It is not uncommon to assume that non-response should occur at random, especially as this poll documents repeatedly calling each likely voter, however in the case of elections there is previous evidence of a bias. Research into the previous two elections, and the polls proceeding then showed a high probability that non-responders were more likely to vote for Donald Trump, who was the Republican candidate in both 2016 and 2020 (@clinton2021task, @kennedy2018evaluation). With Trump running again in 2024, his popularity being underestimated is a distinct possibility, as is mentioned in the Discussion section.
+
 The benefit of how the survey was taken is the detail added from the additional questions asked, some key questions allow for further stratification based on the answers. For example, survey information is gathered on self-reported likelihood to vote, and obviously this gives respondents answers far more weight if they are. One documented phenomenon worth mentioning is social desirability bias, that people do are more inclined to answer with more socially acceptable answers. This could occur throughout the questionnaire, however it is very likely that respondents overestimate their likelihood to vote (@socialdesire). The pollster’s use of both modeled turnout probabilities based on historical data and self-reporting improves the accuracy of predicting who is likely to vote dramatically. The poll’s use of likely voters still brings some uncertainty to its results, as the results may be impacted by non-voters, however siena/NYT took a methodology that aims to negate this as much as possible. Another benefit of live interviews is that clarification of answers is possible and the additional depth of the data that this provides. Qualitative insights to voter's choices or indecision creates a more robust and significant dataset. By comparison this is far more valuable than a singular binary choice quiz you may see online.
 
 In conclusion, while the pollster's methodology is robust and incorporates several best practices in survey research, inherent challenges such as low response rates and the possibility of nonresponse and social desirability biases must be acknowledged. This poll’s methodology makes great efforts to mitigate these biases through its weighting methods, yet these factors could affect the accuracy of the poll results. Nonetheless, The poll provides valuable insights and remains a useful resource for analysing voter preferences, especially due to its aforementioned weighting strategy. The poll's transparency in methodology makes it an even more reliable resource and enhances the credibility and comparability of the findings. 
 
 
-
-## what is included in the poll?
-
-## Methodology and why?
 
 # References
 
