--- a/paper/references.bib
+++ b/paper/references.bib
@@ -198,3 +198,9 @@
   url={https://www.nytimes.com/interactive/2024/09/19/us/politics/times-siena-inquirer-poll-pennsylvania-likely-electorate.html}
 }
 
+@misc{oddsshark2016,
+  author       = {{Odds Shark}},
+  title        = {US Presidential Odds 2016 Futures},
+  howpublished = {\url{https://www.oddsshark.com/entertainment/us-presidential-odds-2016-futures}},
+  note         = {Accessed: 2024-11-03}
+}
