--- a/paper/references.bib
+++ b/paper/references.bib
@@ -202,5 +202,13 @@
   author       = {{Odds Shark}},
   title        = {US Presidential Odds 2016 Futures},
   howpublished = {\url{https://www.oddsshark.com/entertainment/us-presidential-odds-2016-futures}},
-  note         = {Accessed: 2024-11-03}
+  month        = {October},
+  year         = {2016}
+}
+@misc{polymarket,
+  author       = {{Polymarket}},
+  title        = {Presidential Election Winner 2024},
+  howpublished = {\url{https://polymarket.com/event/presidential-election-winner-2024?tid=1730675985444}},
+  month        = {October},
+  year         = {2024}
 }
