--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -21,7 +21,7 @@ import jupyter
 from tabulate import tabulate
 import numpy as np
 ```
-
+\newpage
 # 1 Introduction
 This paper develops a predictive model for the 2024 US Presidential Election using state-level polling data to forecast the likely winner between Donald Trump and Kamala Harris, focusing on swing states that will likely decide the election result. By aggregating high-quality polls that account for recency and sample size, we create a logistic regression model that estimates the probability of a Trump victory in each state. This approach allows us to analyze voter support patterns across the states and predict election outcomes from polling data.
 
@@ -47,7 +47,7 @@ A swing state in the context of a US election is defined as "a state where the n
 ```{python}
 #| ccho: false
 #| label: Fig-1
-#| fig-cap: "This figure shows the cumulative total of electoral votes by state, grouped by current party affiliation, accordng to 538. The chart distinguishes between Democrat, Republican, and swing states, with a color-coded fill under each party’s cumulative curve. Key threshold of 270 electoral vote mark needed to secure a victory is diplayed. This visualization shows the democrats lead with 227 votes and the Republicans with 219 vot secured"
+#| fig-cap: "This figure shows the cumulative total of electoral votes by state, grouped by current party affiliation, accordng to 538. The chart distinguishes between Democrat, Republican, and swing states, with a color-coded fill under each party’s cumulative curve. Key threshold of 270 electoral vote mark needed to secure a victory is diplayed. This visualization shows the democrats lead with 227 votes and the Republicans with 219 votes secured."
 # Define states and electoral votes, ensuring votes are listed in reverse for clarity in plot
 
 
@@ -69,8 +69,9 @@ cumulative_votes = np.cumsum(votes)
 cumulative_votes_reversed = np.cumsum(votes[::-1])
 x = np.arange(len(states))
 
-plt.figure(figsize=(20, 14))
-plt.step(x, cumulative_votes, where='post', color='navy', linewidth=2, marker='o')
+plt.figure(figsize=(18, 14))
+stop = 320
+plt.step(x[:stop], cumulative_votes[:stop], where='post', color='navy', linewidth=2, marker='o')
 x_reversed = np.flip(x)
 plt.step(x_reversed, cumulative_votes_reversed, where='post', color='red', linewidth=2, marker='o')
 
@@ -81,11 +82,11 @@ threshold_index = np.argmax(cumulative_votes >= 219)
 plt.fill_between(x_reversed[:threshold_index + 5], cumulative_votes_reversed[:threshold_index + 5], step='post', color='red', alpha=0.4)
 
 # Adding threshold line and markers
-plt.xticks(range(len(states)), states, rotation=90, fontsize=8)
+plt.xticks(range(len(states)), states, rotation=90, fontsize=13)
 plt.axhline(270, color='purple', linestyle='--', linewidth=2)
 plt.text(len(states) / 2, 275, '270 votes to win', horizontalalignment='center', color='purple', fontsize=12)
-plt.xlabel('Electoral College by State', fontsize=12)
-plt.ylabel('Total Votes', fontsize=12)
+plt.xlabel('Electoral College by State', fontsize=15)
+plt.ylabel('Total Votes', fontsize=15)
 plt.title('Cumulative Electoral Votes by State', fontsize=25)
 plt.grid(True, linestyle='--', alpha=0.5)
 plt.tight_layout()
@@ -476,7 +477,7 @@ The questions themselves included more than just the information on who a partic
 
 ## Methodology pros and cons
 
-The Random contact method in which people are contacted does not provide random sampling, as non-response has made this method on its own more redundant. (@bailey2023new). This is clearly a factor here as the response rate was below 2%. The inclusion of response rate adjustments accounts for the likelihood that certain groups are more or less likely to respond to surveys, and is an efficient way to counter these issues (@brick2013Nonresponse). The stratification also allows for a more representative expectation from the poll ensuring all significant groups are accurately represented in the sample as they are in the population (@Kish1965Survey), Making the means generated more accurate.
+The Random contact method in which people are contacted does not provide random sampling, as non-response has made this method on its own more redundant. (@bailey2023new). This is clearly a factor here as the response rate was below 2%. The inclusion of response rate adjustments accounts for the likelihood that certain groups are more or less likely to respond to surveys, and is an efficient way to counter these issues (@brick2013nonresponse). The stratification also allows for a more representative expectation from the poll ensuring all significant groups are accurately represented in the sample as they are in the population (@Kish1965Survey), Making the means generated more accurate.
 
 With such low response rates the possibility for risk, in spite of the effort made by the pollster, is that non-response and choice are correlated, this is known as non-response bias. It is not uncommon to assume that non-response should occur at random, especially as this poll documents repeatedly calling each likely voter, however in the case of elections there is previous evidence of a bias. Research into the previous two elections and the polls proceeding then showed a high probability that non-responders were more likely to vote for Donald Trump, who was the Republican candidate in both 2016 and 2020 (@clinton2021task, @kennedy2018evaluation). With Trump running again in 2024, his popularity being underestimated is a distinct possibility, as is mentioned in the discussion section.
 
@@ -484,8 +485,5 @@ The benefit of how the survey was taken is the detail added from the additional 
 
 In conclusion, while the pollster's methodology is robust and incorporates several best practices in survey research, inherent challenges such as low response rates and the possibility of nonresponse and social desirability biases must be acknowledged. This poll’s methodology makes great efforts to mitigate these biases through its weighting methods, yet these factors could affect the accuracy of the poll results. Nonetheless, The poll provides valuable insights and remains a useful resource for analyzing voter preferences, especially due to its aforementioned weighting strategy. The poll's transparency in methodology makes it an even more reliable resource and enhances the credibility and comparability of the findings.
 
-## what is included in the poll?
-
-## Methodology and why?
-
+\newpage
 # References
