Add survey to paper

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -448,6 +448,8 @@ The goal of our survey is to predict who will win the election, this is the rese
 
 This approach, inspired by Stantcheva’s guide on survey creation [@Stantcheva], leverages financial incentives to align respondent predictions with their genuine expectations. By combining innovative sampling, incentivized engagement, and rigorous data validation, this methodology aims to bridge the gap between traditional polling and betting market predictions, ultimately enhancing the accuracy of our election forecast.
 
+This survey can be found at: https://docs.google.com/forms/d/e/1FAIpQLSc5LYCAd0OmiIc-LHRFUVgVGuSMKzayVWZB7VOrsrDOe5742w/viewform?vc=0&c=0&w=1&flr=0
+
 # Appendix B: Siena / New York Tims Pennsylvania poll
 
 This section discusses the Siena College and the New York Times poll from the database of polls used in the above analysis. The New York Times (NYT) polls often emphasize the swing states making these very useful in this paper’s analysis. This section will focus specifically on one poll done in Philadelphia, but those in other states follow the same methodology and patterns. This consistency is important for the New York Times when they are reporting their results as it makes comparisons of states reliable. In going over the methodology this appendix aims to understand what about this pollster makes them high quality and where they might improve.
