final ediing of papr and file structure, update readme and requirements

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -212,3 +212,11 @@
   month        = {October},
   year         = {2024}
 }
+
+@misc{oxfordlanguages,
+  title = {Oxford Languages and Google - English Dictionary},
+  author = {{Oxford University Press}},
+  howpublished = {\url{https://languages.oup.com/google-dictionary-en/}},
+  note = {Accessed: 2024-11-03}
+}
+
